--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
   },
   "plugins": ["prettier"],
   "rules": {
+    "import/prefer-default-export": "off",
     "prettier/prettier": ["off", { "singleQuote": true }],
     "semi": ["error", "always"],
     "object-curly-spacing": ["error", "always"],
