--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.4.5",
     "@types/winston": "^2.4.4",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "pm2": "^5.3.0",
     "typescript": "^5.1.6",
@@ -42,6 +45,8 @@
     "@types/supertest": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint": "^8.46.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.9.0",
@@ -50,6 +55,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-sonar-reporter": "^2.0.0",
+    "prettier": "^3.0.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
