--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
   "main": "index.js",
   "types": "./types/global.d.ts",
   "scripts": {
-    "start": "node build/src/server.js",
+    "start": "node build/server.js",
     "dev": "nodemon index.js",
-    "build": "tsc -p . && cp .env ./build/.env && cp .env.local ./build/.env.local",
-    "build:test": "npm run lint && tsc -p . && cp .env ./build/.env && cp .env.test ./build/.env.test",
-    "build:prod": "tsc -p . && cp .env ./build/.env && cp .env.prod ./build/.env.prod",
-    "build:stage": "tsc -p . && cp .env ./build/.env && cp .env.stage ./build/.env.stage",
-    "start:local": "npm run lint && NODE_ENV=local nodemon index.js",
-    "start:test": " NODE_ENV=test node build/src/server.js",
-    "start:staging": "NODE_ENV=staging node build/src/server.js",
-    "start:prod": "NODE_ENV=production node build/src/server.js",
+    "build": "tsc -p . && cp .env ./build/.env",
+    "start:dev": "NODE_ENV=local nodemon index.js",
+    "start:prod": "NODE_ENV=production pm2 start build/server.js",
     "lint": "eslint src/**/*.ts",
     "lint-fix": "eslint --fix src/**/*.ts",
+    "pretty": "prettier --write \"src/**/*.ts\"",
     "prepare": "husky install",
-    "test:custom": "npm test --  tests/unit-tests/environments/environment.spec.ts",
+    "test:custom": "npm test --  tests/unit-tests/dummy.spec.ts",
     "prepush": "npm run lint ",
     "test": "NODE_ENV=test jest --coverage",
     "test:watch": "jest --watch"
@@ -36,6 +32,7 @@
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.6.1",
+    "pm2": "^5.3.0",
     "typescript": "^5.1.6",
     "winston": "^3.10.0"
   },
@@ -47,12 +44,16 @@
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.46.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "supertest": "^6.3.3",
+    "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
